--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,12 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "esNext",
+    "target": "es2015",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["ESNext", "dom"]
+    "lib": ["es2018", "dom"]
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
+    "strictTemplates": true,
     "strictInjectionParameters": true
   }
 }
